WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197281
Elements with "display: inline-block" don't have a touch-action region
https://bugs.webkit.org/show_bug.cgi?id=197281
Summary
Elements with "display: inline-block" don't have a touch-action region
Antoine Quint
Reported
2019-04-25 08:21:57 PDT
Created
attachment 368237
[details]
Reduction Setting "display: inline-block" on an element that also has a "touch-action" property prevents the creation of a touch-action region.
Attachments
Reduction
(383 bytes, text/html)
2019-04-25 08:21 PDT
,
Antoine Quint
no flags
Details
patch
(4.72 KB, patch)
2019-05-09 01:54 PDT
,
Antti Koivisto
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2019-05-07 03:20:47 PDT
<
rdar://problem/50535081
>
Antti Koivisto
Comment 2
2019-05-09 01:54:37 PDT
Created
attachment 369479
[details]
patch
WebKit Commit Bot
Comment 3
2019-05-09 02:41:43 PDT
Comment on
attachment 369479
[details]
patch Clearing flags on attachment: 369479 Committed
r245126
: <
https://trac.webkit.org/changeset/245126
>
WebKit Commit Bot
Comment 4
2019-05-09 02:41:44 PDT
All reviewed patches have been landed. Closing bug.
Antoine Quint
Comment 5
2019-05-09 04:35:37 PDT
This patch also addressed CSS Grids, nice!
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug