Elements with "display: inline-block" don't have a touch-action region https://bugs.webkit.org/show_bug.cgi?id=197281 <rdar://problem/50535081>

Reviewed by Antoine Quint.

Source/WebCore:

Test: pointerevents/ios/touch-action-region-inline-block.html

PaintPhase::EventRegion failed to traverse into inline boxes.

* rendering/InlineElementBox.cpp:
(WebCore::InlineElementBox::paint):
* rendering/RenderElement.cpp:
(WebCore::RenderElement::paintAsInlineBlock):

LayoutTests:

* pointerevents/ios/touch-action-region-inline-block-expected.txt: Added.
* pointerevents/ios/touch-action-region-inline-block.html: Added.


Canonical link: https://commits.webkit.org/211877@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245126 268f45cc-cd09-0410-ab3c-d52691b4dbfc